Basic next/previous buttons for matches (#9)
